--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,274 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  padding-block-start: 100px;
+  font-family: var(--main-font), Arial, Helvetica, sans-serif;
+  font-variation-settings: "wght" var(--normal-font-wght);
+  background-color: var(--bg-color);
+  color: var(--main-color);
+  background-image: var(--bg-image);
+  background-repeat: repeat;
+  background-size: 4px;
+  background-attachment: fixed;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
+  inline-size: 100%;
+  background-color: var(--bg-color);
+  border: var(--border);
+  padding-top: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem);
+  padding-block-end: 23px;
+}
+
+.header__content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
+
+.header__logo {
+  font-family: var(--accent-font), "Courier New", Courier, monospace;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+}
+
+.header__h1 {
+  font-family: var(--accent-font), "Courier New", Courier, monospace;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4em;
+  padding-inline-start: 19px;
+}
+
+.theme-menu__button {
+  background-color: transparent;
+  border: none;
+  font-family: var(--accent-font), "Courier New", Courier, monospace;
+  font-size: 14px;
+  text-transform: uppercase;
+  position: relative;
+  cursor: pointer;
+  transition: opacity 0.3s;
+  padding: 0;
+}
+
+.theme-menu__button::after {
+  content: "";
+  position: absolute;
+  opacity: 0.6;
+  background-color: var(--main-color);
+
+  transition: transform 0.3s;
+  transform: scaleX(0);
+  transform-origin: left;
+
+  inset-inline-start: 0;
+  inset-block-end: -2px;
+  inline-size: 100%;
+  block-size: 2px;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+}
+
+.theme-menu__button:focus-visible {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  inline-size: 16px;
+  block-size: 13px;
+  inset-block-start: 0;
+  inset-inline-start: -20px;
+  animation: arrow 0.5s infinite ease-in-out alternate;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 100px 0;
+  gap: 50px;
+  inline-size: 100%;
+}
+
+.content__cards {
+  inline-size: inherit;
+}
+
+.content__card {
+  background-color: var(--bg-color);
+  border: var(--border);
+  inline-size: 100%;
+  display: flex;
+  flex-direction: column;
+  inline-size: inherit;
+  padding-block-end: 25px;
+}
+
+.content__card-header {
+  padding: 5px 10px;
+  font-variation-settings: "wght" var(--bold-font-wght);
+  font-size: 18px;
+  line-height: 19px;
+}
+
+.content__card-image {
+  inline-size: 100%;
+  object-fit: cover;
+  object-position: center;
+  margin-block-start: 2px;
+}
+
+.content__card-description {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  padding: 27px 27px;
+  font-size: 18px;
+  line-height: 117%;
+}
+
+.card__footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+  padding-inline: 25px;
+  gap: 8px;
+}
+
+.button {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--bg-color);
+  border: var(--border);
+  font-family: var(--accent-font), "Courier New", Courier, monospace;
+  color: var(--main-color);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 90%;
+  cursor: pointer;
+  position: relative;
+  transition: box-shadow 0.3s ease;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: var(--bg-color);
+  transition: width 0.5s ease-in-out, background-color 0.5s ease-in-out;
+}
+
+.button:hover::after {
+  width: 100%;
+  background-color: var(--main-color);
+}
+
+.button:hover {
+  color: var(--bg-color);
+  transition: color 1s ease;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0px var(--main-color);
+}
+
+.button__img {
+  width: 21px;
+  position: relative;
+  z-index: 1;
+}
+
+.button__text {
+  position: relative;
+  z-index: 1;
+}
+
+.card__like-button {
+  min-inline-size: 130px;
+  min-block-size: 38px;
+}
+
+.content__footer-button {
+  padding: 15px 20px;
+}
+
+.like-icon {
+  inline-size: 100%;
+}
+
+.card__icon-button {
+  inline-size: 2.5em;
+  background-color: transparent;
+  border: 0px solid var(--main-color);
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  outline: 0px solid var(--main-color);
+  outline-offset: -2px;
+  transition: outline 0.3s ease;
+}
+
+.card__icon-button:focus {
+  outline: 0px solid var(--main-color);
+}
+
+.card__icon-button:focus-visible {
+  outline: none;
+  box-shadow: inset 0 0 0 2px var(--main-color);
+}
+
+@media (width >=375px) {
+  .page {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    max-inline-size: 700px;
+  }
+
+  .content__footer-button {
+    flex-direction: row;
+    align-items: center;
+  }
 }
