--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,55 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root .theme-light {
+  --main-font: "Inter";
+  --accent-font: "PressStart2P";
+  --normal-font-wght: 400;
+  --bold-font-wght: 700;
+  --bg-color: #fff;
+  --main-color: #000;
+  --bg-image: url(../svg/pattern-light.svg);
+  --border: 2px solid var(--main-color);
+  --heart-color: #ff0000;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --main-font: "Inter";
+    --accent-font: "PressStart2P";
+    --normal-font-wght: 400;
+    --bold-font-wght: 700;
+    --bg-color: #fff;
+    --main-color: #000;
+    --bg-image: url(../svg/pattern-light.svg);
+    --border: 2px solid var(--main-color);
+    --heart-color: #ff0000;
+  }
+}
+
+:root .theme-dark {
+  --main-font: "Inter";
+  --accent-font: "PressStart2P";
+  --bg-color: #000;
+  --main-color: #00cc14;
+  --normal-font-wght: 465;
+  --bold-font-wght: 785;
+  --bg-image: url(../svg/pattern-dark.svg);
+  --border: 2px solid var(--main-color);
+  --heart-color: #ff0000;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-font: "Inter";
+    --accent-font: "PressStart2P";
+    --bg-color: #000;
+    --main-color: #00cc14;
+    --normal-font-wght: 465;
+    --bold-font-wght: 785;
+    --bg-image: url(../svg/pattern-dark.svg);
+    --border: 2px solid var(--main-color);
+    --heart-color: #ff0000;
+  }
+}
