--- a/styles/style.css
+++ b/styles/style.css
@@ -19,11 +19,12 @@
   min-block-size: 100dvb;
   padding-block-start: 100px;
   font-family: var(--main-font), Arial, Helvetica, sans-serif;
-  font-variation-settings: 'wght' var(--normal-font-wght, 400);
+  font-variation-settings: "wght" var(--normal-font-wght, 400);
   color: var(--main-color, #000);
-  background: var(--bg-color, #fff)
-    var(--bg-image, url(../svg/pattern-light.svg)) repeat fixed;
-  background-size: 4px;
+  background-color: var(--bg-color, #fff);
+  background-image: var(--bg-gradient);
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .header {
@@ -46,12 +47,12 @@
 }
 
 .header__logo {
-  font-family: var(--accent-font), 'Copperplate', fantasy;
+  font-family: var(--accent-font), "Copperplate", fantasy;
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
 }
 
 .header__h1 {
-  font-family: var(--accent-font), 'Copperplate', fantasy;
+  font-family: var(--accent-font), "Copperplate", fantasy;
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   text-transform: uppercase;
 }
@@ -66,22 +67,22 @@
 .theme-menu__button {
   background-color: transparent;
   border: none;
-  font-family: var(--accent-font), 'Copperplate', fantasy;
+  font-family: var(--accent-font), "Copperplate", fantasy;
   font-size: 14px;
   text-transform: uppercase;
   position: relative;
   cursor: pointer;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s ease;
   padding: 0;
 }
 
 .theme-menu__button::after {
-  content: '';
+  content: "";
   position: absolute;
   opacity: 0.6;
   background-color: var(--main-color, #000);
 
-  transition: transform 0.3s;
+  transition: transform 0.3s ease;
   transform: scaleX(0);
   transform-origin: left;
 
@@ -114,7 +115,7 @@
 }
 
 .theme-menu__button:disabled::before {
-  content: '▶';
+  content: "▶";
   position: absolute;
   inline-size: 16px;
   block-size: 13px;
@@ -142,16 +143,49 @@
 
 .content__card-header {
   padding: 5px 10px;
-  font-variation-settings: 'wght' var(--bold-font-wght, 700);
+  font-variation-settings: "wght" var(--bold-font-wght, 700);
   font-size: 18px;
   line-height: 19px;
   border-block-end: 2px solid var(--main-color, #000);
 }
 
+.content__card-image-wrapper {
+  position: relative;
+}
+
+.content__image-label {
+  position: absolute;
+  font-family: var(--accent-font), "Copperplate", fantasy;
+  font-size: 14px;
+  line-height: 1em;
+  color: var(--main-color, #000);
+  text-shadow: -1px 0 var(--label-text-border, #fff),
+    0 1px var(--label-text-border, #fff), 1px 0 var(--label-text-border, #fff),
+    0 -1px var(--label-text-border, #fff);
+  inset-inline-end: 25px;
+  inset-block-start: 25px;
+  mix-blend-mode: hard-light;
+  opacity: 0.5;
+  z-index: 1;
+}
+
+@supports (
+  (text-stroke: 1px var(--label-text-border, #fff)) or
+    (-webkit-text-stroke: 1px var(--label-text-border, #fff))
+) {
+  .label {
+    -webkit-text-stroke: 1px var(--label-text-border, #fff);
+    text-stroke: 1px var(--label-text-border, #fff);
+    text-shadow: none;
+  }
+}
+
 .content__card-image {
+  display: block;
   inline-size: 100%;
   object-fit: cover;
   object-position: center;
+  aspect-ratio: 1 / 1;
 }
 
 .content__card-description {
@@ -162,6 +196,7 @@
   font-size: 18px;
   line-height: 117%;
   border-block-start: 2px solid var(--main-color, #000);
+  word-break: keep-all;
 }
 
 .card__footer {
@@ -204,8 +239,8 @@
   align-items: center;
   background-color: var(--bg-color, #fff);
   border: 2px solid var(--main-color, #000);
-  font-family: var(--accent-font), 'Copperplate', fantasy;
-  color: var(--main-color, #000);
+  font-family: var(--accent-font), "Copperplate", fantasy;
+  color: var(--bg-color, #fff);
   font-size: 14px;
   font-weight: 400;
   line-height: 90%;
@@ -219,15 +254,15 @@
 }
 
 .button::after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: 0;
   left: 0;
   width: 0;
   height: 100%;
-  background-color: var(--bg-color, #fff);
-  transition: width 0.5s ease-in-out, background-color 0.5s ease-in-out;
+  background-color: var(--main-color, #fff);
+  transition: width 0.5s ease-in-out;
 }
 
 .button:hover::after {
@@ -255,7 +290,9 @@
 
 .button__text {
   position: relative;
+  color: var(--button-text-color);
   z-index: 1;
+  mix-blend-mode: difference;
 }
 
 .content__footer-button {
@@ -263,9 +300,91 @@
 }
 
 .button__img {
-  width: 21px;
+  color: var(--button-text-color);
+  width: 28px;
   position: relative;
   z-index: 1;
+  mix-blend-mode: difference;
+}
+
+.content__footer-dialog {
+  max-inline-size: 353px;
+  background-color: var(--bg-color, #fff);
+  border: 2px solid var(--main-color, #000);
+  padding: 30px;
+  font-family: var(--accent-font), "Copperplate", fantasy;
+  font-size: 14px;
+  color: var(--main-color, #000);
+  text-transform: uppercase;
+  line-height: 1.5;
+}
+
+.content__footer-dialog[open] {
+  gap: 30px;
+}
+
+.content__footer-dialog::backdrop {
+  opacity: 0.75;
+  background: var(--backdrop-color);
+}
+
+.content__footer-dialog-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-block-end: 30px;
+}
+
+.content__footer-dialog-img {
+  flex-shrink: 0;
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+.content__footer-dialog-title {
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.content__footer-dialog__button {
+  text-transform: uppercase;
+  inline-size: 100%;
+  padding: 12.5px 0;
+}
+
+/* фильтры */
+.filter-contrast {
+  filter: contrast(70%);
+}
+
+.filter-hue-rotate {
+  filter: hue-rotate(110deg);
+}
+
+.filter-grayscale {
+  filter: grayscale(100%);
+}
+
+.filter-sepia {
+  filter: sepia(80%);
+}
+
+.filter-saturate {
+  filter: saturate(120%);
+}
+
+.filter-blur {
+  filter: blur(2px);
+}
+
+.filter-invert {
+  filter: invert(100%);
+}
+
+.filter-multiple {
+  filter: hue-rotate(100deg) brightness(150%) contrast(70%);
 }
 
 @media (width >=697px) {
@@ -279,5 +398,9 @@
   .content__footer-button {
     flex-direction: row;
     align-items: center;
+  }
+
+  .button__img {
+    width: 21px;
   }
 }
